--- a/.hintrc
+++ b/.hintrc
@@ -4,6 +4,15 @@
   ],
   "hints": {
     "disown-opener": "off",
-    "typescript-config/is-valid": "off"
+    "typescript-config/is-valid": "off",
+    "compat-api/css": [
+      "default",
+      {
+        "ignore": [
+          "font-synthesis",
+          "-webkit-text-size-adjust"
+        ]
+      }
+    ]
   }
 }
